# SmartDietian

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
app/: __init__.py  main.py
app/agent/: email_agent.py  personal_chief.py  prompt_loader.py
app/agent/prompts/: personal_chief.j2
app/api/v1/: chat.py  oss.py  sessions.py
app/common/: logger.py
app/models/: schemas.py  session.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: chat.ts  oss.ts
frontend/src/assets/: main.css
frontend/src/components/: AppChat.vue  AppHeader.vue  ChatEmpty.vue  ChatInput.vue  ChatMessage.vue  ChatSidebar.vue
frontend/src/composables/: useChat.ts  useImageUpload.ts
frontend/src/locales/: en.ts  index.ts  zh-CN.ts
frontend/src/utils/: request.ts
scripts/: git-commit-push.cjs  git-commit-push.ps1
